css to solve align problem

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,6 +25,8 @@
 }
 
 .App-header {
+  position: absolute;
+  width: 100%;
   height: 150px;
   display: flex;
   flex-direction: column;
@@ -42,10 +44,23 @@
 }
 
 .articles {
-  position: relative;
-  height: 1372px;
-  left: 110px;
-  top: 20px;
+  /* position: relative; */
+  position: absolute;
+  left: 20%;
+  top: 160px;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+.initial_search {
+  position: absolute;
+  height: 400px;
+  left: 20px;
+  top: 170px;
+  width: 50%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -55,8 +70,20 @@
 
 .article {
   margin: 10px;
-  left: 250px;
-  width: 1000px;
+  left: 20%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #f0f0f0;
+  padding: 1rem;
+  /* position: relative; */
+  border-radius: 0.5rem;
+  line-height: 18pt;
+  /* box-shadow: 1rem 1rem 1rem #b9d6f2; */
+}
+.query_display {
+  margin: 10px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #f0f0f0;
@@ -77,7 +104,7 @@
 }
 
 .answer-list {
-  margin-top: 1rem;
+  margin-top: 5px;
   background-color: #fff;
   border-radius: 0.5rem;
   padding: 0.5rem;
@@ -117,9 +144,6 @@
   font-weight: bold;
   font-size: 48px;
   line-height: 94px;
-
-  /* LightGray-Background */
-
   color: #f4f4f6;
 }
 
@@ -135,7 +159,8 @@
 }
 
 .search-form {
-  width: 800px;
+  position: absolute;
+  width: 58%;
   height: 60px;
   display: flex;
   top: 70px;
